k8s/dex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex-ingress
  namespace: dex
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: mythica-gke-public-ip
  labels:
    tier: web
spec:
  rules:
    - http:
        paths:
          - path: /dex
            pathType: ImplementationSpecific
            backend:
              service:
                name: dex
                port:
                  number: 5556
